Blender selects faces outside of Clipping Region if X-Ray is off #72104

Closed
opened 2019-12-02 06:17:41 +01:00 by item412 · 10 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20

Blender Version
Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-11-30 17:33, hash: f1ac64921b
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: 26bd5ebd42
Worked: (optional)

Exact steps for others to reproduce the error

  1. Create a cube
  2. Alt-B half of it
  3. Turn off X-ray
  4. Select hidden faces

select.blend

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20 **Blender Version** Broken: version: 2.82 (sub 3), branch: master, commit date: 2019-11-30 17:33, hash: `f1ac64921b` Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: `26bd5ebd42` Worked: (optional) **Exact steps for others to reproduce the error** 1. Create a cube 2. Alt-B half of it 3. Turn off X-ray 4. Select hidden faces [select.blend](https://archive.blender.org/developer/F8184469/select.blend)
Author

Added subscriber: @item412

Added subscriber: @item412

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

can confirm, the viewport clip its not clipping selection or tools like polybuild, however poly build doesn't care if xray its on or off.
I was about to do the report but i was busy, thanks.

Build: f1ac64921b
imagen.png

imagen.png

can confirm, the viewport clip its not clipping selection or tools like polybuild, however poly build doesn't care if xray its on or off. I was about to do the report but i was busy, thanks. Build: f1ac64921b49 ![imagen.png](https://archive.blender.org/developer/F8184637/imagen.png) ![imagen.png](https://archive.blender.org/developer/F8184625/imagen.png)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, was working in 2.80

Can confirm, was working in 2.80
Clément Foucault was assigned by Philipp Oeser 2019-12-03 10:45:47 +01:00
Member

Caused by 3a08153d7a it seems.

Caused by 3a08153d7a it seems.

Added subscribers: @TonyQ, @ronsn

Added subscribers: @TonyQ, @ronsn

@TonyQ: I've added you as a subscriber to this task here because I closed your report: #72834

@TonyQ: I've added you as a subscriber to this task here because I closed your report: #72834

This issue was referenced by 848b28d71e

This issue was referenced by 848b28d71e18bd6ba569b1d38286faf784f07648

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72104
No description provided.