Fix T72104 Blender selects faces outside of Clipping Region if X-Ray is off